--- a/src/MainPage/index.css
+++ b/src/MainPage/index.css
@@ -303,69 +303,99 @@ body::-webkit-scrollbar-thumb {
     z-index: -1;
 }
 
-@keyframes ldio-myosbd5c33i {
-    0% {
-        opacity: 1
-    }
+.lds-spinner {
+    color: official;
+    display: inline-block;
+    position: relative;
+    /* width: 80px; */
+    /* height: 80px; */
+}
 
-    50% {
-        opacity: .5
+.lds-spinner div {
+    transform-origin: 40px 40px;
+    animation: lds-spinner 1.2s linear infinite;
+}
+
+.lds-spinner div:after {
+    content: " ";
+    display: block;
+    position: absolute;
+    top: 3px;
+    left: 37px;
+    width: 6px;
+    height: 18px;
+    border-radius: 20%;
+    background: #fff;
+}
+
+/* #405189 */
+
+.lds-spinner div:nth-child(1) {
+    transform: rotate(0deg);
+    animation-delay: -1.1s;
+}
+
+.lds-spinner div:nth-child(2) {
+    transform: rotate(30deg);
+    animation-delay: -1s;
+}
+
+.lds-spinner div:nth-child(3) {
+    transform: rotate(60deg);
+    animation-delay: -0.9s;
+}
+
+.lds-spinner div:nth-child(4) {
+    transform: rotate(90deg);
+    animation-delay: -0.8s;
+}
+
+.lds-spinner div:nth-child(5) {
+    transform: rotate(120deg);
+    animation-delay: -0.7s;
+}
+
+.lds-spinner div:nth-child(6) {
+    transform: rotate(150deg);
+    animation-delay: -0.6s;
+}
+
+.lds-spinner div:nth-child(7) {
+    transform: rotate(180deg);
+    animation-delay: -0.5s;
+}
+
+.lds-spinner div:nth-child(8) {
+    transform: rotate(210deg);
+    animation-delay: -0.4s;
+}
+
+.lds-spinner div:nth-child(9) {
+    transform: rotate(240deg);
+    animation-delay: -0.3s;
+}
+
+.lds-spinner div:nth-child(10) {
+    transform: rotate(270deg);
+    animation-delay: -0.2s;
+}
+
+.lds-spinner div:nth-child(11) {
+    transform: rotate(300deg);
+    animation-delay: -0.1s;
+}
+
+.lds-spinner div:nth-child(12) {
+    transform: rotate(330deg);
+    animation-delay: 0s;
+}
+
+@keyframes lds-spinner {
+    0% {
+        opacity: 1;
     }
 
     100% {
-        opacity: 1
+        opacity: 0;
     }
-}
-
-.ldio-myosbd5c33i div {
-    position: absolute;
-    width: 20px;
-    height: 80px;
-    top: 60px;
-    animation: ldio-myosbd5c33i 2.272727272727273s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-}
-
-.ldio-myosbd5c33i div:nth-child(1) {
-    transform: translate(30px, 0);
-    background: #405189;
-    animation-delay: -1.3636363636363635s;
-}
-
-.ldio-myosbd5c33i div:nth-child(2) {
-    transform: translate(70px, 0);
-    background: #405189;
-    animation-delay: -0.9090909090909092s;
-}
-
-.ldio-myosbd5c33i div:nth-child(3) {
-    transform: translate(110px, 0);
-    background: #405189;
-    animation-delay: -0.4545454545454546s;
-}
-
-.ldio-myosbd5c33i div:nth-child(4) {
-    transform: translate(150px, 0);
-    background: #405189;
-    animation-delay: -2.272727272727273s;
-}
-
-.loadingio-spinner-bars-xdw4mmf02v {
-    width: 50px;
-    height: 50px;
-    display: inline-block;
-    overflow: hidden;
-}
-
-.ldio-myosbd5c33i {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    transform: translateZ(0) scale(1);
-    backface-visibility: hidden;
-    transform-origin: 0 0;
-    /* see note above */
-}
-
-.ldio-myosbd5c33i div {
-    box-sizing: content-box;
 }
