--- a/src/modules/index.css
+++ b/src/modules/index.css
@@ -35,6 +35,7 @@
     height: 10px !important
 }
 
+
 .recharts-tooltip-wrapper {
     border-radius: 5px !important;
 }
@@ -67,8 +68,37 @@
 
 .modal-backdrop {
     /* Adjust the transparency by changing the alpha value */
-    background-color: rgba(0, 0, 0, 0.5) !important;
+    background-color: rgba(0, 0, 0, 0.2) !important;
 }
+
+.modal-content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    pointer-events: auto;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(68, 67, 67, 0.1) !important;
+    border-radius: 0.3rem;
+    outline: 0;
+  }
+
+.modal-dialog-centered {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: calc(100vh - 200px);
+    /* Adjust the value to leave space for header/footer if necessary */
+}
+
+.modal-backdrop.fade {
+    opacity: 0;
+  }
+  
+.modal-backdrop.show {
+    opacity: 0.2 !important;
+  }
 
 .PhoneInput {
     border: 1px solid gainsboro;
